estrutura da page parcialmente finalizada

--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BurgerPro | A hamburgueria do programador</title>
+    <link rel="shortcut icon" href="assets/favicon-anderdev-cinza-verde.ico">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div>
+        <button>Exiba nossos hambúrgueres <br> <b>ForEach</b></button>
+        <button>Aplicar 10% desconto em tudo <br> <b>Map</b></button>
+        <button>Valor total de todos os hambúrgueres <br> <b>Reduce</b></button>
+        <button>Filtra por hambúrgueres veganos <br> <b>Filter</b></button>
+    </div>
+
+    <ul>
+        <li>
+            <img src="assets/xsalada.jpeg" alt="">
+            <p>X-Salada</p>
+            <p>R$ 30,00</p>
+        </li>
+    </ul>
 </body>
 </html>
