estilização parcealmente finalizada

--- a/index.html
+++ b/index.html
@@ -3,23 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
     <title>BurgerPro | A hamburgueria do programador</title>
     <link rel="shortcut icon" href="assets/favicon-anderdev-cinza-verde.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div>
-        <button>Exiba nossos hambúrgueres <br> <b>ForEach</b></button>
-        <button>Aplicar 10% desconto em tudo <br> <b>Map</b></button>
-        <button>Valor total de todos os hambúrgueres <br> <b>Reduce</b></button>
-        <button>Filtra por hambúrgueres veganos <br> <b>Filter</b></button>
+    <div class="container-buttons">
+        <button>Exibir todo menu <br> <b>ForEach</b></button>
+        <button>Aplicar 10% desconto <br> <b>Map</b></button>
+        <button>Valor total de todos <br> <b>Reduce</b></button>
+        <button>Filtrar por veganos <br> <b>Filter</b></button>
     </div>
 
     <ul>
         <li>
             <img src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
-            <p>R$ 30,00</p>
+            <p class="hamburguer-price">R$ 30,00</p>
+        </li>
+
+        <li>
+            <img src="assets/xsalada.jpeg" alt="">
+            <p>X-Salada</p>
+            <p class="hamburguer-price">R$ 30,00</p>
+        </li>
+
+        <li>
+            <img src="assets/xsalada.jpeg" alt="">
+            <p>X-Salada</p>
+            <p class="hamburguer-price">R$ 30,00</p>
         </li>
     </ul>
 </body>
