--- a/index.html
+++ b/index.html
@@ -11,28 +11,33 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <img class="burgerpro-logo" src="assets/burgerpro-logo.png" alt="">
+        <p>A hamburgueria do programador!</p>
+    </header>
+
     <div class="container-buttons">
-        <button>Exibir todo menu <br> <b>ForEach</b></button>
-        <button>Aplicar 10% desconto <br> <b>Map</b></button>
-        <button>Valor total de todos <br> <b>Reduce</b></button>
-        <button>Filtrar por veganos <br> <b>Filter</b></button>
+        <button>Exibir todo menu <br> <b class="function-color">ForEach</b></button>
+        <button>Aplicar 10% desconto <br> <b class="function-color">Map</b></button>
+        <button>Valor total de todos <br> <b class="function-color">Reduce</b></button>
+        <button>Filtrar por veganos <br> <b class="function-color">Filter</b></button>
     </div>
 
     <ul>
         <li>
-            <img src="assets/xsalada.jpeg" alt="">
+            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
         </li>
 
         <li>
-            <img src="assets/xsalada.jpeg" alt="">
+            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
         </li>
 
         <li>
-            <img src="assets/xsalada.jpeg" alt="">
+            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
         </li>
