logica do ForEach parcialmente finalizada

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
     </header>
 
     <div class="container-buttons">
-        <button>Exibir todo menu <br> <b class="function-color">ForEach</b></button>
+        <button class="show-all">Exibir todo menu <br> <b class="function-color">ForEach</b></button>
         <button>Aplicar 10% desconto <br> <b class="function-color">Map</b></button>
         <button>Valor total de todos <br> <b class="function-color">Reduce</b></button>
         <button>Filtrar por veganos <br> <b class="function-color">Filter</b></button>
     </div>
 
     <ul>
-        <li>
+        <!-- <li>
             <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
@@ -40,7 +40,10 @@
             <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
-        </li>
+        </li> -->
     </ul>
+
+    <script src="products.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
