finalizado logica do map

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <div class="container-buttons">
         <button class="show-all">Exibir todo menu <br> <b class="function-color">ForEach</b></button>
-        <button>Aplicar 10% desconto <br> <b class="function-color">Map</b></button>
+        <button class="map-all">Aplicar 10% desconto <br> <b class="function-color">Map</b></button>
         <button>Valor total de todos <br> <b class="function-color">Reduce</b></button>
         <button>Filtrar por veganos <br> <b class="function-color">Filter</b></button>
     </div>
