finalizado logica de filter

--- a/index.html
+++ b/index.html
@@ -19,25 +19,13 @@
     <div class="container-buttons">
         <button class="show-all">Exibir todo menu <br> <b class="function-color">ForEach</b></button>
         <button class="map-all">Aplicar 10% desconto <br> <b class="function-color">Map</b></button>
-        <button>Valor total de todos <br> <b class="function-color">Reduce</b></button>
-        <button>Filtrar por veganos <br> <b class="function-color">Filter</b></button>
+        <button class="sum-all">Valor total de todos <br> <b class="function-color">Reduce</b></button>
+        <button class="filter-all">Filtrar por veganos <br> <b class="function-color">Filter</b></button>
     </div>
 
     <ul>
         <!-- <li>
-            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
-            <p>X-Salada</p>
-            <p class="hamburguer-price">R$ 30,00</p>
-        </li>
-
-        <li>
-            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
-            <p>X-Salada</p>
-            <p class="hamburguer-price">R$ 30,00</p>
-        </li>
-
-        <li>
-            <img class="hamburgueres" src="assets/xsalada.jpeg" alt="">
+            <img class="hamburgueres" src="assets/xsalada.png" alt="">
             <p>X-Salada</p>
             <p class="hamburguer-price">R$ 30,00</p>
         </li> -->
