finalizaçao do projeto com responsividade

--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
         </li> -->
     </ul>
 
+    <footer>
+        <span>Feito com <strong>♥</strong> por</span> <a href="https://www.instagram.com/_anderdev" target="_blank">@_anderdev <ion-icon
+            name="logo-instagram"></ion-icon> </a>
+      </footer>
+    
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
     <script src="products.js"></script>
     <script src="script.js"></script>
 </body>
